# MinRepFastApi

./: README.md  pyproject.toml
.github/workflows/: linting.yaml
website/: website.py
